--- a/kube/collaborator/collaborator-deployment.yaml
+++ b/kube/collaborator/collaborator-deployment.yaml
@@ -32,11 +32,11 @@ spec:
                 secretKeyRef:
                   name: huly-secret
                   key: SERVER_SECRET
-          image: hardcoreeng/collaborator:v0.7.242
+          image: haiodo/collaborator:v0.7.300
           name: collaborator
           ports:
             - containerPort: 3078
           resources:
             limits:
-              memory: '512M'
+              memory: "512M"
       restartPolicy: Always
