--- a/kube/front/front-deployment.yaml
+++ b/kube/front/front-deployment.yaml
@@ -71,7 +71,7 @@ spec:
               value: http://stats
             - name: DESKTOP_UPDATES_CHANNEL
               value: selfhost
-          image: hardcoreeng/front:v0.7.242
+          image: haiodo/front:v0.7.300
           name: front
           ports:
             - containerPort: 8080
