--- a/kube/fulltext/fulltext-deployment.yaml
+++ b/kube/fulltext/fulltext-deployment.yaml
@@ -49,7 +49,7 @@ spec:
               value: http://stats
             - name: QUEUE_CONFIG
               value: redpanda:9092
-          image: hardcoreeng/fulltext:v0.7.242
+          image: haiodo/fulltext:v0.7.300
           name: fulltext
           ports:
             - containerPort: 4700
