--- a/kube/transactor/transactor-deployment.yaml
+++ b/kube/transactor/transactor-deployment.yaml
@@ -53,7 +53,7 @@ spec:
                   key: SERVER_SECRET
             - name: QUEUE_CONFIG
               value: redpanda:9092
-          image: hardcoreeng/transactor:v0.7.242
+          image: haiodo/transactor:v0.7.300
           name: transactor
           ports:
             - containerPort: 3333
