--- a/kube/workspace/workspace-deployment.yaml
+++ b/kube/workspace/workspace-deployment.yaml
@@ -31,7 +31,7 @@ spec:
                   name: huly-secret
                   key: STORAGE_CONFIG
             - name: MODEL_ENABLED
-              value: '*'
+              value: "*"
             - name: DB_URL
               valueFrom:
                 secretKeyRef:
@@ -49,7 +49,7 @@ spec:
                   key: SERVER_SECRET
             - name: QUEUE_CONFIG
               value: redpanda:9092
-          image: hardcoreeng/workspace:v0.7.242
+          image: haiodo/workspace:v0.7.300
           name: workspace
           resources:
             limits:
