--- a/traefik/template-compose.yaml
+++ b/traefik/template-compose.yaml
@@ -92,7 +92,7 @@ services:
       - internal-services
 
   rekoni:
-    image: hardcoreeng/rekoni-service:${HULY_VERSION}
+    image: haiodo/rekoni-service:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -114,7 +114,7 @@ services:
       - "traefik.http.routers.rekoni.tls.certresolver=myresolver"
 
   transactor:
-    image: hardcoreeng/transactor:${HULY_VERSION}
+    image: haiodo/transactor:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -152,7 +152,7 @@ services:
       - "traefik.http.middlewares.strip-transactor-prefix.stripprefix.prefixes=/transactor"
 
   collaborator:
-    image: hardcoreeng/collaborator:${HULY_VERSION}
+    image: haiodo/collaborator:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -185,7 +185,7 @@ services:
       - "traefik.http.middlewares.strip-collaborator-prefix.stripprefix.prefixes=/collaborator"
 
   account:
-    image: hardcoreeng/account:${HULY_VERSION}
+    image: haiodo/account:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -208,7 +208,7 @@ services:
       - "traefik.http.routers.account.tls.certresolver=myresolver"
 
   workspace:
-    image: hardcoreeng/workspace:${HULY_VERSION}
+    image: haiodo/workspace:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -218,7 +218,7 @@ services:
       - internal-services
 
   front:
-    image: hardcoreeng/front:${HULY_VERSION}
+    image: haiodo/front:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -248,7 +248,7 @@ services:
       - "traefik.http.routers.front.tls.certresolver=myresolver"
 
   fulltext:
-    image: hardcoreeng/fulltext:${HULY_VERSION}
+    image: haiodo/fulltext:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -259,7 +259,7 @@ services:
       - internal-services
 
   stats:
-    image: hardcoreeng/stats:${HULY_VERSION}
+    image: haiodo/stats:${HULY_VERSION}
     restart: unless-stopped
     environment:
       <<: *common-env
